--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -2,7 +2,7 @@
 <% end %>
   <div>
     <div>
-      <%= link_to "<< Back", category_path(@category), class: "text-lg text-bold text-primary-focus" %>
+      <%= link_to raw('<i class="fa-sharp fa-solid fa-angle-left"></i>'), category_path(@category), class: "text-lg text-bold text-primary-focus p-2" %>
     </div>
     <div class="flex flex-col items-center">
 
