--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -2,7 +2,7 @@
 <% end %>
   <div>
     <div>
-      <%= link_to "<< Back", categories_path, class: "text-lg text-bold text-primary-focus" %>
+      <%= link_to raw('<i class="fa-sharp fa-solid fa-angle-left"></i>'), categories_path, class: "text-lg text-bold text-primary-focus p-2" %>
     </div>
     <div class="flex flex-col items-center">
       <%= form_with model: @category, html: { class: "bg-white p-2 my-2 text-lg w-full max-w-sm flex flex-col items-center gap-2" } do |f| %>
