--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -3,7 +3,7 @@
 
 <div>
   <div>
-    <%= link_to "<< Back", category_path(@category), class: "text-lg text-bold text-primary-focus" %>
+    <%= link_to raw('<i class="fa-sharp fa-solid fa-angle-left"></i>'), category_path(@category), class: "text-lg text-bold text-primary-focus p-2" %>
   </div>
   <div class="flex flex-col items-center">
     <%= form_with(model: @item, url: category_item_path(@category), method: :patch, html: { class: "bg-white p-2 my-2 text-lg w-full max-w-sm flex flex-col items-center gap-2" } ) do |f| %>
