--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -2,10 +2,11 @@
 <% end %>
 
 <div>
-  <div>
+  <div class="p-2">
     <%= link_to raw('<i class="fa-sharp fa-solid fa-angle-left"></i>'), category_path(@category), class: "text-lg text-bold text-primary-focus p-2" %>
   </div>
-  <div class="flex flex-col items-center">
+  <div class="flex justify-center items-center h-screen">
+    <div class="flex flex-col items-center">
       <%= form_with(model: @item, url: category_items_path(@category), html: { class: "bg-white p-2 my-2 text-lg w-full max-w-sm flex flex-col items-center gap-2" }) do |f| %>
         <div class="font-bold flex justify-between w-full text-accent">
           <%= f.label :name %>
@@ -18,6 +19,7 @@
         <div class="font-bold bg-secondary hover:bg-secondary-focus px-4 py-1">
           <%= f.submit "Save" %>
         </div>
-    <% end %>
+      <% end %>
+    </div>
   </div>
 </div>
